--- a/1.Modulize.md
+++ b/1.Modulize.md
@@ -773,7 +773,7 @@ android {
             shrinkResources true
             zipAlignEnabled true
             useProguard true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro', file(rootProject.ext.path["globalProguardFilesPath"])
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro', file(rootProject.ext.android["globalProguardFilesPath"])
             applicationVariants.all { variant ->
                 variant.outputs.all {
                     def apkName = "${defaultConfig.applicationId}_${defaultConfig.versionName}_${releaseTime()}.apk"
